[package]
name = "nsm_archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
reqwest = { version = "0.11.10", features = ["blocking"] }
tl = "0.7.5"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"