[package]
name = "nsm_archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18", features = ["full"] }
async-channel = "1.6"
futures = "0.3"
reqwest = { version = "0.11", features = ["stream"] }
tl = "0.7"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
html-escape = "0.2"
sanitize-filename-reader-friendly = "2.2"
crossbeam-queue = "0.3"